CostalCloud/force-app/main/default/objects/Client_Market__c.object
<CustomObject>
    <label>Client Market</label>
    <nameField>
        <label>Client Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>