CostalCloud/force-app/main/default/objects/Client_Market__c/fields/Client_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Division__c</fullName>
    <label>Client Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>