CostalCloud/force-app/main/default/objects/Client_Market__c/fields/Client_Division_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Division_Number__c</fullName>
    <label>Client Division Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>