CostalCloud/force-app/main/default/objects/Client_Market__c/fields/Client_Market_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Client_Market_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Market ID(18)</label>
    <type>Text</type>
</CustomField>