CostalCloud/force-app/main/default/objects/Client_Market__c/fields/Client_Region__c.field-meta.xml
<CustomField>
    <fullName>Client_Region__c</fullName>
    <label>Client Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>NY Metro</fullName>
            </value>
            <value>
                <fullName>Ohio Valley</fullName>
            </value>
            <value>
                <fullName>Central0011</fullName>
            </value>
            <value>
                <fullName>Northeast0022</fullName>
            </value>
            <value>
                <fullName>Southeast0033</fullName>
            </value>
            <value>
                <fullName>Midwest0044</fullName>
            </value>
            <value>
                <fullName>West0055</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>