CostalCloud/force-app/main/default/objects/Client_Market__c/fields/Custom_Labor__c.field-meta.xml
<CustomField>
    <fullName>Custom_Labor__c</fullName>
    <label>Custom Labor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>