CostalCloud/force-app/main/default/objects/Client_Market__c/fields/Jasons_Code__c.field-meta.xml
<CustomField>
    <fullName>Jasons_Code__c</fullName>
    <label>Jasons Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>