CostalCloud/force-app/main/default/objects/Client_Market__c/fields/RFI_Reporting_Market__c.field-meta.xml
<CustomField>
    <fullName>RFI_Reporting_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Reporting Market</label>
    <referenceTo>RFI_Reporting_Markets__c</referenceTo>
    <relationshipLabel>Client Markets</relationshipLabel>
    <relationshipName>Client_Markets</relationshipName>
    <type>Lookup</type>
</CustomField>