CostalCloud/force-app/main/default/objects/Client_Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market_Number__c</columns>
    <columns>Client_Division__c</columns>
    <columns>Client_Division_Number__c</columns>
    <columns>Client_Region__c</columns>
    <columns>Client_Region_Number__c</columns>
    <columns>RFI_Reporting_Market__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>