CostalCloud/force-app/main/default/objects/Client_Market__c/listViews/Client_Markets_HDS.listView-meta.xml
<ListView>
    <fullName>Client_Markets_HDS</fullName>
    <columns>NAME</columns>
    <columns>Client_Region__c</columns>
    <columns>Client_Division__c</columns>
    <columns>Market_Number__c</columns>
    <columns>Unique_ID__c</columns>
    <columns>RFI_Reporting_Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>HDS</value>
    </filters>
    <label>Client Markets HDS</label>
</ListView>